dark mode working, just needed to fix moon align and check routes after logout

--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=Josefin+Slab:wght@600&family=Merriweather&family=Playfair+Display+SC:wght@400;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
-:root {
-  --blue: rgb(15, 39, 63);
-  --white: rgb(236, 236, 236);
-}
 
 .App {
   text-align: center;
@@ -15,44 +11,6 @@
   
 }
 
-body {
-  background: var(--background-color);
-  color: var(--text-color);
-  font-weight: var(--font-weight);
-  transition: background 0.3s ease-in-out, color 0.6s ease-in-out;
-}
-
-body.light {
-  --background-color: var(--white);
-  --text-color: var(--blue);
-  --font-weight: 400;
-}
-
-body.dark {
-  --background-color: var(--blue);
-  --text-color: var(--white);
-  --font-weight: 500;
-}
-
-nav {
-  background: var(--text-color);
-}
-
-nav a{
-  color: var(--background-color);
-}
-/* 
-.darkApp {
-  text-align: center;
-  height: 100vh;
-  font-family: 'Cormorant Garamond', serif;
-  background-color: rgb(27, 24, 34);
-  color: #cbb575;
-}
-
-.darkApp h1{
-  font-family: 'Abril Fatface', cursive;
-} */
 
 /* #f1bc68 - butterscotch yellow*/
 /* #5f9595 - emerald sea - blue green */
